# BarkhausenStudio

./: Barkhausen_studio.cbp  CMakeLists.txt  project_deploy.sh
barkhausen_studio/: CMakeLists.txt
barkhausen_studio/kernel/MainWindow/charts/: CMakeLists.txt
barkhausen_studio/kernel/MainWindow/charts/chart_base/: CMakeLists.txt
barkhausen_studio/kernel/MainWindow/charts/chart_base/include/: chart_base.h  chart_view.h  chartwindow.h  cursors.h  info_table.h
barkhausen_studio/kernel/MainWindow/charts/chart_base/src/: chart_view.cpp  chartwindow.cpp  cursors.cpp
barkhausen_studio/kernel/MainWindow/charts/chart_base/ui/: ChartWindow.ui
barkhausen_studio/kernel/MainWindow/charts/include/: B_H_chart.h  barkhausen_chart.h  hysteresis_chart.h
barkhausen_studio/kernel/MainWindow/charts/src/: hysteresis_chart.cpp
barkhausen_studio/kernel/MainWindow/menu/chart_settings/B_H/: CMakeLists.txt
barkhausen_studio/kernel/MainWindow/menu/chart_settings/barkhausen/: CMakeLists.txt
barkhausen_studio/kernel/MainWindow/menu/chart_settings/custom_items/: CMakeLists.txt
barkhausen_studio/kernel/MainWindow/settings_storage/settings/: CMakeLists.txt
barkhausen_studio/kernel/MainWindow/settings_storage/settings/devices/: measurement_device_settings.h  signal_source_settings.h
barkhausen_studio/kernel/MainWindow/settings_storage/settings/include/: B_H_settings.h  measurement_settings.h  settings_names.h  signal_soure_settings.h  ui_settings.h  usbtmc_settings.h
barkhausen_studio/kernel/MainWindow/settings_storage/settings/measurement/: device_description.h  measurement_settings.h
barkhausen_studio/kernel/MainWindow/settings_storage/settings/names/: settings_names.h
barkhausen_studio/kernel/MainWindow/settings_storage/settings/src/: ui_settings.cpp  usbtmc_settings.cpp
barkhausen_studio/kernel/MainWindow/settings_storage/settings/ui/: B_H_settings.h  barkhausen_settings.h  hysteresis_settings.h  ui_settings.h
barkhausen_studio/kernel/api/: CMakeLists.txt
barkhausen_studio/kernel/api/include/: barkhausen_studio.h
barkhausen_studio/kernel/api/src/: barkhausen_studio.cpp  main.cpp
barkhausen_studio/kernel/command_multiplexer/: CMakeLists.txt
barkhausen_studio/kernel/command_multiplexer/include/: modules_holder.h
barkhausen_studio/kernel/command_multiplexer/src/: modules_holder.cpp
barkhausen_studio/kernel/core/core/: CMakeLists.txt
barkhausen_studio/kernel/core/core/include/: core.h
barkhausen_studio/kernel/core/core/src/: core.cpp
barkhausen_studio/kernel/core/data_buffer/: CMakeLists.txt
barkhausen_studio/kernel/core/data_buffer/include/: data_buffer.h  measurement_data.h  statistical_data.h  ui_data.h
barkhausen_studio/kernel/core/data_buffer/src/: data_buffer.cpp
barkhausen_studio/kernel/core/data_creator/: CMakeLists.txt
barkhausen_studio/kernel/core/data_creator/include/: data_creator.h  data_creator_worker.h  data_math.h
barkhausen_studio/kernel/core/data_creator/src/: data_creator.cpp  data_creator_worker.cpp  data_math.cpp
barkhausen_studio/kernel/core/device_finder/: CMakeLists.txt
barkhausen_studio/kernel/core/device_finder/include/: device_finder.h
barkhausen_studio/kernel/core/device_finder/src/: device_finder.cpp
barkhausen_studio/kernel/core/measurement_device_holder/: CMakeLists.txt
barkhausen_studio/kernel/core/measurement_device_holder/include/: data_parser.h  measurement_device_holder.h
barkhausen_studio/kernel/core/measurement_device_holder/src/: data_parser.cpp  measurement_device_holder.cpp
barkhausen_studio/kernel/core/signal_source_holder/: CMakeLists.txt
barkhausen_studio/kernel/core/signal_source_holder/include/: signal_source_holder.h
barkhausen_studio/kernel/core/signal_source_holder/src/: signal_source_holder.cpp
barkhausen_studio/kernel/hardware_devices/measurement_device/: CMakeLists.txt
barkhausen_studio/kernel/hardware_devices/measurement_device/include/: measurement_device.h  measurement_device_core.h  measurement_device_worker.h
barkhausen_studio/kernel/hardware_devices/measurement_device/measurement_device_core_interface/: CMakeLists.txt
barkhausen_studio/kernel/hardware_devices/measurement_device/src/: measurement_device.cpp  measurement_device_worker.cpp  measuremet_device_core.cpp
barkhausen_studio/kernel/hardware_devices/measurement_device/usbtmc/: CMakeLists.txt
barkhausen_studio/kernel/hardware_devices/measurement_device/usbtmc_device_finder/: CMakeLists.txt
barkhausen_studio/kernel/hardware_devices/signal_source/: CMakeLists.txt
barkhausen_studio/kernel/hardware_devices/signal_source/include/: signal_source_core.h
barkhausen_studio/kernel/hardware_devices/signal_source/signal_source_core_interface/: CMakeLists.txt
barkhausen_studio/kernel/hardware_devices/signal_source/src/: signal_source_core.cpp
barkhausen_studio/kernel/measurement_devices/current_measurement/: CMakeLists.txt
barkhausen_studio/kernel/measurement_devices/current_measurement/current_measurement_device_autogen/: moc_predefs.h
barkhausen_studio/kernel/measurement_devices/current_measurement/include/: agilent_u2541a.h  agilent_u2541a_wrapped.h  current_measurement_device.h  current_measurement_device_worker.h  settings.h
barkhausen_studio/kernel/measurement_devices/current_measurement/src/: agilent_u2541a_wrapped.cpp  agilent_u2541a_wrapped.pyx  current_measurement_device.cpp  current_measurement_device_worker.cpp  settings.cpp
ui/MainWindow/: CMakeLists.txt  ui_mainwindow.h
ui/MainWindow/include/: acq_points_per_chunk.h  acqsettingswidget.h  acquisition_menu.h  acquisition_settings_menu.h  main_menu.h  mainwindow.h  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters
ui/MainWindow/main_window_autogen/: moc_predefs.h
ui/MainWindow/src/: acq_points_per_chunk.cpp  acqsettingswidget.cpp  acqsettingswidget.ui  acquisition_menu.cpp  acquisition_settings_menu.cpp  main_menu.cpp  mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave
ui/current_chart/: CMakeLists.txt
ui/current_chart/include/: currentchart.h  ui_current_chart.h
ui/current_chart/src/: currentchart.cpp  currentchart.ui
(+93 files in other folders)
